--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Instagram</title>
   </head>
   <body>
-    <i class="fa-solid fa-angle-right"></i>
+
     <section id="header">
         <header>
             <div class="logo">
@@ -362,7 +362,7 @@
           <div class="modal-content">
             <div class="modal-header bg-secondary">
               <h5 class="modal-title text-white" id="staticBackdropLabel">Create Post</h5>
-              <button type="button" class="close rounded rounded-circle btn btn-light border-0" data-bs-dismiss="modal" aria-label="Close">
+              <button type="button" class="close close-btn-c rounded rounded-circle btn btn-light border-0" data-bs-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true" class="h5">&times;</span>
               </button>
             </div>
@@ -388,7 +388,7 @@
           <div class="modal-content">
             <div class="modal-header bg-secondary">
               <h5 class="modal-title text-white" id="staticBackdropLabel">Edit post</h5>
-              <button type="button" class="close rounded rounded-circle btn btn-light border-0" data-bs-dismiss="modal" aria-label="Close">
+              <button type="button" class="close rounded close-btn-c rounded-circle btn btn-light border-0" data-bs-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true" class="h5">&times;</span>
               </button>
             </div>
